RESOLVED FIXED241573
[Catalyst] Fix build
https://bugs.webkit.org/show_bug.cgi?id=241573
Summary [Catalyst] Fix build
Per Arne Vollan
Reported 2022-06-13 15:13:58 PDT
The function CGSSetDenyWindowServerConnections has not been declared.
Attachments
Per Arne Vollan
Comment 1 2022-06-13 15:15:47 PDT
Per Arne Vollan
Comment 2 2022-06-13 15:17:44 PDT
EWS
Comment 3 2022-06-13 18:18:06 PDT
Committed r295510 (251515@main): <https://commits.webkit.org/251515@main> Reviewed commits have been landed. Closing PR #1482 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.