[Catalyst] Fix build https://bugs.webkit.org/show_bug.cgi?id=241573 <rdar://95038696>

Reviewed by Wenson Hsieh.

The function CGSSetDenyWindowServerConnections has not been declared.

* Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h:
* Source/WebKit/Shared/Cocoa/AuxiliaryProcessCocoa.mm:

Canonical link: https://commits.webkit.org/251515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295510 268f45cc-cd09-0410-ab3c-d52691b4dbfc